@@ -93,8 +93,10 @@ drop		[\032]
 
 	/* Optional directives we recognize */
 <INITIAL>"`__FILE__"	{ if (!pedantic()) {
-			     yytext = (char*)VPreprocLex::s_currentLexp->m_curFilelinep->cfilename();
-			     yyleng = strlen(yytext); return (VP_TEXT);
+			     static string rtnfile;
+			     rtnfile = '"'; rtnfile += VPreprocLex::s_currentLexp->m_curFilelinep->cfilename();
+			     rtnfile += '"'; yytext=(char*)rtnfile.c_str(); yyleng = rtnfile.length();
+			     return (VP_STRING);
 	                  } else return(VP_DEFREF); }
 <INITIAL>"`__LINE__"	{ if (!pedantic()) {
 	                     static char buf[10];
