@@ -13,11 +13,11 @@ verilog/inc_ifdef.v:26: `line 26 "verilog/inc_ifdef.v" 0
 verilog/inc_ifdef.v:40: `line 40 "verilog/inc_ifdef.v" 0
 verilog/inc_ifdef.v:41: `line 41 "verilog/inc_ifdef.v" 2
 verilog/inc_ifdef.v:41: `line 1 "verilog/inc2.v" 0
-verilog/inc2.v:4: At file verilog/inc2.v line 4
+verilog/inc2.v:4: At file "verilog/inc2.v" line 4
 verilog/inc3.v:1: `line 5 "verilog/inc2.v" 0
 verilog/inc3.v:1: `line 1 "verilog/inc3.v" 1
 verilog/inc3.v:1: `line 2 "inc3_a_filename_from_line_directive" 0
-inc3_a_filename_from_line_directive:10:  At file inc3_a_filename_from_line_directive line 10
+inc3_a_filename_from_line_directive:10:  At file "inc3_a_filename_from_line_directive" line 10
 inc3_a_filename_from_line_directive:13: `line 13 "inc3_a_filename_from_line_directive" 0
 inc3_a_filename_from_line_directive:17: `line 17 "inc3_a_filename_from_line_directive" 0
 inc3_a_filename_from_line_directive:18: `line 18 "inc3_a_filename_from_line_directive" 2
