@@ -64,7 +64,7 @@ COMMENT: // This file ONLY is placed into the Public Domain, for any use,
 verilog/inc2.v:2:  /*CMT*/ 
 COMMENT: // without warranty, 2000-2009 by Wilson Snyder.
 verilog/inc2.v:3:  /*CMT*/ 
-verilog/inc2.v:4: At file verilog/inc2.v  line 4
+verilog/inc2.v:4: At file "verilog/inc2.v"  line 4
 verilog/inc3.v:1:  
 verilog/inc3.v:1: `line 5 "verilog/inc2.v" 0
 verilog/inc3.v:1: `line 1 "verilog/inc3.v" 1
@@ -81,7 +81,7 @@ inc3_a_filename_from_line_directive:7:
 inc3_a_filename_from_line_directive:8:   
 COMMENT: // FOO
 inc3_a_filename_from_line_directive:9:    /*CMT*/ 
-inc3_a_filename_from_line_directive:10:   At file inc3_a_filename_from_line_directive  line 10
+inc3_a_filename_from_line_directive:10:   At file "inc3_a_filename_from_line_directive"  line 10
 inc3_a_filename_from_line_directive:11: 
 inc3_a_filename_from_line_directive:12:    
 inc3_a_filename_from_line_directive:13: 
