@@ -538,4 +538,4 @@ verilog/parser_sv.v:231: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:235: TASK  'task' 'do_reset'
 verilog/parser_sv.v:235: PORT  'kind' 'task' '' 'vmm_cl_func_colon::restart_e' '' '1'
 verilog/parser_sv.v:238: TASK  'task' 'empty_comma'
-verilog/parser_sv.v:243: ENDTASKFUNC  'endtask'
+verilog/parser_sv.v:244: ENDTASKFUNC  'endtask'
