@@ -1,2 +1,2 @@
-At file verilog/inc2.v  line 4
-  At file inc3_a_filename_from_line_directive  line 10
+At file "verilog/inc2.v"  line 4
+  At file "inc3_a_filename_from_line_directive"  line 10
