@@ -1086,7 +1086,7 @@ sub symbol {
     my $since = $parser->unreadback(); $parser->unreadback('');
 
     if ($token eq "__LINE__") { $token = $parser->lineno(); }
-    if ($token eq "__FILE__") { $token = $parser->filename(); }
+    if ($token eq "__FILE__") { $token = '"'.$parser->filename().'"'; }
 
     if ($In_Message) {
 	$Params[$Param_Num] .= $since . $token;
